# strange-planet

./: README.md  pyproject.toml
.github/workflows/: deploy.yml
app/: main.py
app/static/: app.js
app/templates/: index.html
